# MemryX

./: .gitignore
MemryX_eXamples/: README.md
MemryX_eXamples/image_inference/face_recognition/: README.md
MemryX_eXamples/image_inference/face_recognition/src/: MXFace.py  requirements.txt  run.py  test_face_recognition.py
MemryX_eXamples/image_inference/oriented_bounding_boxes/: README.md
MemryX_eXamples/image_inference/oriented_bounding_boxes/models/: download_model.sh
MemryX_eXamples/image_inference/oriented_bounding_boxes/src/: MXObb.py
MemryX_eXamples/multi_dfp_application/cartoonizer_pose/: README.md
MemryX_eXamples/multi_dfp_application/cartoonizer_pose/src/cpp/: CMakeLists.txt  CartoonApp.cpp  CartoonApp.h  PoseApp.cpp  PoseApp.h  cartoon_pose.cpp
MemryX_eXamples/multi_dfp_application/cartoonizer_pose/src/python/: apps.py  displayer.py  run.py
MemryX_eXamples/multi_dfp_application/cartoonizer_pose_overlay/: README.md
MemryX_eXamples/multi_dfp_application/cartoonizer_pose_overlay/src/python/: apps.py  constant.py  displayer.py  run_overlay.py
MemryX_eXamples/multi_dfp_application/cartoonizer_pose_overlay/src/utils/: generate_onnx.py
MemryX_eXamples/multistream_video_inference/multistream_objectdetection_yolov7Tiny/: README.md
MemryX_eXamples/multistream_video_inference/object_detection_yolov8/: README.md
MemryX_eXamples/open_vocabulary/yoloe/: README.md
MemryX_eXamples/open_vocabulary/yoloe/assets/: boundary_map.json
MemryX_eXamples/open_vocabulary/yoloe/src/python/: YoloE.py  demo.py
MemryX_eXamples/optimized_multistream_apps/yolov8_object_detection/: CMakeLists.txt  README.md
MemryX_eXamples/optimized_multistream_apps/yolov8_object_detection/assets/: config.txt
MemryX_eXamples/optimized_multistream_apps/yolov8_pcb_defect_detection/: CMakeLists.txt  README.md
MemryX_eXamples/optimized_multistream_apps/yolov8_pcb_defect_detection/assets/: config.txt
MemryX_eXamples/video_inference/centernet/: README.md
MemryX_eXamples/video_inference/depth_midas/: README.md
MemryX_eXamples/video_inference/depth_midas/src/cpp/: CMakeLists.txt  depthEstimation.cpp
MemryX_eXamples/video_inference/face_emotion_detection/: README.md
MemryX_eXamples/video_inference/intrusion_detection/: README.md  requirements.txt
MemryX_eXamples/video_inference/mediapipe_hands/: README.md
MemryX_eXamples/video_inference/object_detection_yolox/: README.md
MemryX_eXamples/video_inference/pointcloud_from_depth/: README.md
MemryX_eXamples/video_inference/realtime_facelandmark_detection/: LICENSE.md  README.md
MemryX_eXamples/video_inference/realtime_multiface_recognition/: README.md
MemryX_eXamples/video_inference/realtime_multiface_recognition/src/: demo.py
MemryX_eXamples/video_inference/segmentation_yolov8/: README.md
MemryX_eXamples/video_inference/singlestream_objectdetection_yolov7Tiny/: README.md
MemryX_eXamples/video_inference/singlestream_peopletracking_yolov7Tiny/: README.md
MemryX_eXamples/video_inference/vehicle_detection/: README.md
MemryX_eXamples/video_inference/wireframe/: README.md
MemryX_eXamples/video_inference/wireframe/src/: run_wireframe.py
(+48 files in other folders)
